--- a/src/app.cms/components/createPost/createPost.css
+++ b/src/app.cms/components/createPost/createPost.css
@@ -66,7 +66,7 @@
 }
 
 .style-7::-webkit-scrollbar {
-  width: 2px;
+  width: 8px;
   height: 2px;
 }
 .style-7::-webkit-scrollbar-button {
